# notion_autotests_web

./: README.md  pyproject.toml
notion_autotest_web/data/: members.py  page.py
notion_autotest_web/model/: app.py
notion_autotest_web/model/controls/: content_block.py  sidebar.py  table.py
notion_autotest_web/model/pages/: page.py  settings_and_members.py  start_page.py  trash.py
notion_autotest_web/utils/: path.py
tests/: conftest.py  test_content_block.py  test_members.py  test_page.py  test_trash.py
